gcc/testsuite/rust/rustc/ui/parser/recover-assoc-const-constraint.rs
#[cfg(FALSE)]
fn syntax() {
    bar::<Item = 42>(); // { dg-error "" "" { target *-*-* } }
    bar::<Item = { 42 }>(); // { dg-error "" "" { target *-*-* } }
}

fn main() {}

